[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["MakMemEng <yatani.mems4568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.8.0"
# python = ">=3.8.0, <3.9"
python = ">=3.10.0, <3.11"

black = "^22.12.0"
flake8 = "^5.0.4"
ipykernel = "^6.29.2"
isort = "^5.13.2"
jupyterlab = "^4.1.2"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
torch = "^2.4.0"
polars = "^1.4.1"
gensim = "^4.3.3"
pandas = "*"
numpy = "*"
sklearn = "*"
spacy = "*"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = "E203,"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
